--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,52 @@
 .introBody {
+    position:absolute;
+    top:25vh;
+    left:1vw;
     width:70vw;
-    color: rgb(155, 140, 140);
+    height:37vh;
+    color: rgba(238, 238, 238, 0.795);
     font-size: 4vw;
     font-family: Mulish;
-    
-    
+    background-color: rgb(54, 80, 105);
+    padding: 2vw;
+    border-radius: 14px;
+    outline: rgb(218, 212, 198) solid 2px;
+    animation: introBody ease 1s;
 }
 
+@keyframes introBody {
+    from {transform: translateY(-10vh)}
+    to {transform: translateY(0vh)}
+}
 #logo {
     position:absolute;
     width: 22vw;
     top:0.55vh;
-    right:35vw;
-
+    right:32vw;
+    animation: logo ease .7s;
+}
+@keyframes logo {
+    from {transform: translateY(-10vh)}
+    to {transform: translateY(0.1vh)}
 }
 
 #logBtn {
     position:absolute;
     width: 18vw;
     height:8vw;
-    top:70vh;
+    top:75vh;
     left:70vw;
     border-radius:20px;
     font-size: 2.5vw;
     font-family: Mulish;
     background-color:rgb(218, 226, 236);
     box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
-    
+    display:inline-block;
+    overflow:hidden;
+    width:0;
+    white-space: nowrap;
+    animation:
+        typing .7s steps(10, end) forwards;
 }
 
 
@@ -47,6 +67,10 @@
   from { width: 0 }
   to { width: 13ch }
 }
+@keyframes typing2 {
+  from { height: 0 }
+  to { height: 65ch }
+}
 body {
     background-color: rgb(41, 61, 83);
 }
@@ -60,7 +84,11 @@ body {
     top:15vw;
     color:whitesmoke;
     font-family: Mulish;
-
+    animation: logUser ease .7s ;
+}   
+@keyframes logUser {
+    from {transform: translateY(-2vh)}
+    to {transform: translateY(0vh)}
 }
 
 .logUser input{
@@ -80,7 +108,7 @@ body {
     top:50vh;
     font-family: Mulish;
     color:whitesmoke;
-
+    animation: logUser ease .9s ;
 }
 
 .logPassword input{
@@ -104,10 +132,21 @@ body {
     border-radius: 25px;
     box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.6);
     background: linear-gradient(90deg, rgb(55, 75, 97), rgb(65, 83, 100)) ;
-
+    animation: logOutline ease .5s;
+    animation:
+        typing2 .7s steps(50, end) forwards;
+}
+@keyframes logOutline {
+    from {transform: translateY(-2vh)}
+    to {transform: translateY(0vh)}
 }
 
-
+#background {
+    position:absolute;
+    left:35vw;
+    top:15.3vh;
+    width:54.5vw;
+}
 
 .logDone {
     position:absolute;
@@ -120,6 +159,7 @@ body {
     font-family: Mulish;
     background-color:rgb(218, 226, 236);
     box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
+    animation: logUser ease 1.1s ;
 }
 
 
@@ -229,7 +269,12 @@ body {
     font-family: Mulish;
     color:whitesmoke;
     font-size:45px;
-
+    display:inline-block;
+    overflow:hidden;
+    width:0;
+    white-space: nowrap;
+    animation:
+        typing .7s steps(11, end) forwards;
 
 
 
@@ -256,7 +301,7 @@ body {
     left: 43.5vw;
     bottom: 20vh;
     font-family: Mulish;
-    
+    animation: logUser ease 1.3s ;
 
   }
 
@@ -403,13 +448,7 @@ body {
     box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
 }
 
-#canvas {
-    position: absolute;
-    left:35vw;
-    top:15vh;
-    outline: auto;
-  
-}
+
 
 @keyframes gradeText {
     from { transform: translateX(-20vw); } 
@@ -479,4 +518,12 @@ body {
 @keyframes passionTB {
     from { transform: translateX(-260vw); } 
     to { transform: translateX(0vw); }
+}
+
+#canvas {
+    position: absolute;
+    left:35vw;
+    top:15vh;
+    outline: auto;
+    
 }
