--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ body {
 .logUser{
     position:absolute;
     font-size:5vw; 
-    left:30vw;
+    left:7vw;
     top:15vw;
     color:whitesmoke;
     font-family: Mulish;
@@ -106,7 +106,7 @@ body {
 .logPassword{
     position:absolute;
     font-size:5vw; 
-    left:30vw;
+    left:7vw;
     top:50vh;
     font-family: Mulish;
     color:whitesmoke;
@@ -123,25 +123,71 @@ body {
 
     
 }
+.questionOutline{
+    position:absolute;
+    left:65vw;
+    top:10vw;
+    width:30vw;
+    height:70vh;
+    border-radius: 25px;
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.6);
+    background: linear-gradient(90deg, rgb(55, 75, 97), rgb(65, 83, 100)) ;
+    white-space: pre-wrap;
+    padding:4px;
+    animation: questionOutline ease .5s;
 
+
+   
+
+
+
+}
+@keyframes questionOutline {
+    from {transform: translateY(-2vh)}
+    to {transform: translateY(0vh)}
+}
+
+.TextQuestion{
+    position:absolute;
+    font-size:2.15vw;
+    color:white;
+    top:10vh;
+    font-family: Mulish;
+    animation:
+    typing2 .7s steps(50, end) forwards;
+    
+
+
+
+}
+
+#WhyId{
+    position:absolute;
+    animation:
+    typing .7s steps(12, end) forwards;
+    font-size:2.15vw;
+   color: white;
+   font-family: Mulish;
+   left:66vw;
+   bottom:640px;
+
+
+
+}
 
 .logOutline {
     position:absolute;
-    left:22vw;
+    left:5vw;
     top:10vw;
-    width:60vw;
+    width:50vw;
     height:64vh;
     border-radius: 25px;
     box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.6);
     background: linear-gradient(90deg, rgb(55, 75, 97), rgb(65, 83, 100)) ;
     animation: logOutline ease .5s;
-    animation:
-        typing2 .7s steps(50, end) forwards;
+    
 }
-@keyframes logOutline {
-    from {transform: translateY(-2vh)}
-    to {transform: translateY(0vh)}
-}
+
 
 #background {
     position:absolute;
@@ -156,11 +202,11 @@ body {
     height:5vw;
     font-size:1.5vw;
     top:65vh;
-    left:47vw;
+    left:20vw;
     border-radius: 15px;
     font-family: Mulish;
     background-color:rgb(218, 226, 236);
-    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.2);
+    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.);
     animation: logUser ease 1.1s ;
 }
 
@@ -281,7 +327,7 @@ body {
 }
 .welcomeDiv{
     position:absolute;
-    left:40vw;
+    left:20vw;
     font-family: Mulish;
     color:whitesmoke;
     font-size:45px;
@@ -314,7 +360,7 @@ body {
     position:absolute;
     left:0vw;
     color: rgb(224, 224, 224);
-    left: 43.5vw;
+    left: 20vw;
     bottom: 20vh;
     font-family: Mulish;
     animation: logUser ease 1.3s ;
