--- a/styles.css
+++ b/styles.css
@@ -130,15 +130,47 @@ body {
     width:60vw;
     height:64vh;
     border-radius: 25px;
-    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 2px 2px rgb(192, 192, 192);
     background: linear-gradient(90deg, rgb(55, 75, 97), rgb(65, 83, 100)) ;
     animation: logOutline ease .5s;
-    animation:
-        typing2 .7s steps(50, end) forwards;
+    animation: logUser ease 1.1s ;
+}
+
+.logOutlineTop {
+    transform: rotate(90deg);
+    position:absolute;
+    left:14vw;
+    top:19vw;
+    width:30vw;
+    height:30vh;
+    border-radius: 15px;
+    background: linear-gradient(90deg, rgb(56, 78, 100), rgb(65, 83, 100)) ;
+    animation: logOutlineTop ease 0.7s ;
+    box-shadow: 0 0 1px 1px rgb(158, 158, 158);
+}
+.logOutlineBottom {
+    transform: rotate(90deg);
+    position:absolute;
+    left:60vw;
+    bottom:18vw;
+    width:30vw;
+    height:30vh;
+    border-radius: 15px;
+    background: linear-gradient(90deg, rgb(55, 75, 97), rgb(65, 83, 100)) ;
+    animation: logOutlineBottom ease 0.7s ;
+    box-shadow: 0 0 1px 1px rgb(158, 158, 158);
 }
 @keyframes logOutline {
     from {transform: translateY(-2vh)}
     to {transform: translateY(0vh)}
+}
+@keyframes logOutlineTop {
+    from {transform: rotate(90deg) translateX(-4vh)}
+    to {transform: rotate(90deg) translateX(0vh)}
+}
+@keyframes logOutlineBottom {
+    from {transform: rotate(90deg) translateX(1vh)}
+    to {transform: rotate(90deg) translateX(0vh)}
 }
 
 #background {
@@ -265,14 +297,15 @@ body {
 }
 .welcomeDiv{
     position:absolute;
-    left:40vw;
+    left:37vw;
     font-family: Mulish;
     color:whitesmoke;
-    font-size:45px;
+    font-size:55px;
     display:inline-block;
     overflow:hidden;
     width:0;
     white-space: nowrap;
+    padding: 5px;
     animation:
         typing .7s steps(11, end) forwards;
 
