--- a/styles.css
+++ b/styles.css
@@ -1,562 +1,676 @@
+
 .introBody {
-    position:absolute;
-    top:25vh;
-    left:1vw;
-    width:70vw;
-    height:37vh;
-    color: rgba(238, 238, 238, 0.795);
-    font-size: 4vw;
-    font-family: Mulish;
-    background-color: rgb(54, 80, 105);
-    padding: 2vw;
-    border-radius: 14px;
-    outline: rgb(218, 212, 198) solid 2px;
-    animation: introBody ease 1s;
+   position:absolute;
+   top:25vh;
+   left:1vw;
+   width:70vw;
+   height:37vh;
+   color: rgba(238, 238, 238, 0.795);
+   font-size: 4vw;
+   font-family: Mulish;
+   background-color: rgb(54, 80, 105);
+   padding: 2vw;
+   border-radius: 14px;
+   outline: rgb(218, 212, 198) solid 2px;
+   animation: introBody ease 1s;
 }
+
 
 @keyframes introBody {
-    from {transform: translateY(-10vh)}
-    to {transform: translateY(0vh)}
+   from {transform: translateY(-10vh)}
+   to {transform: translateY(0vh)}
 }
 #logo {
-    position:absolute;
-    width: 22vw;
-    top:0.55vh;
-    right:32vw;
-    animation: logo ease .7s;
+   position:absolute;
+   width: 22vw;
+   top:0.55vh;
+   right:32vw;
+   animation: logo ease .7s;
 }
 @keyframes logo {
-    from {transform: translateY(-10vh)}
-    to {transform: translateY(0.1vh)}
+   from {transform: translateY(-10vh)}
+   to {transform: translateY(0.1vh)}
 }
 
+
 #logBtn {
-    position:absolute;
-    width: 18vw;
-    height:8vw;
-    top:75vh;
-    left:70vw;
-    border-radius:20px;
-    font-size: 2.5vw;
-    font-family: Mulish;
-    background-color:rgb(218, 226, 236);
-    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
-    display:inline-block;
-    overflow:hidden;
-    width:0;
-    white-space: nowrap;
-    animation:
-        typing .7s steps(10, end) forwards;
+   position:absolute;
+   width: 18vw;
+   height:8vw;
+   top:75vh;
+   left:70vw;
+   border-radius:20px;
+   font-size: 2.5vw;
+   font-family: Mulish;
+   background-color:rgb(218, 226, 236);
+   box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
+   display:inline-block;
+   overflow:hidden;
+   width:0;
+   white-space: nowrap;
+   animation:
+       typing .7s steps(10, end) forwards;
 }
+
+
 
 
 .titleTitle {
-    font-size: 10vw;
-    font-family: Arial Narrow;
-    letter-spacing: 5px;
-    color:rgb(255, 255, 255);
-    display:inline-block;
-    overflow:hidden;
-    width:0;
-    white-space: nowrap;
-    animation:
-        typing .7s steps(11, end) forwards;
+   font-size: 10vw;
+   font-family: Arial Narrow;
+   letter-spacing: 5px;
+   color:rgb(255, 255, 255);
+   display:inline-block;
+   overflow:hidden;
+   width:0;
+   white-space: nowrap;
+   animation:
+       typing .7s steps(11, end) forwards;
 }
 
+
 @keyframes typing {
-  from { width: 0 }
-  to { width: 13ch }
+ from { width: 0 }
+ to { width: 13ch }
 }
 @keyframes typing2 {
-  from { height: 0 }
-  to { height: 65ch }
+ from { height: 0 }
+ to { height: 65ch }
 }
 body {
-    background-color: rgb(41, 61, 83);
+   background-color: rgb(41, 61, 83);
 }
+
+
+
 
 
 
 .logUser{
-    position:absolute;
-    font-size:5vw; 
-    left:30vw;
-    top:15vw;
-    color:whitesmoke;
-    font-family: Mulish;
-    animation: logUser ease .7s ;
-}   
+   position:absolute;
+   font-size:5vw;
+   left:30vw;
+   top:15vw;
+   color:whitesmoke;
+   font-family: Mulish;
+   animation: logUser ease .7s ;
+}  
 @keyframes logUser {
-    from {transform: translateY(-2vh)}
-    to {transform: translateY(0vh)}
+   from {transform: translateY(-2vh)}
+   to {transform: translateY(0vh)}
 }
 
+
 .logUser input{
-    width:20vw; 
-    height:5vh;
-    font-size:1.5vw;
-    background-color:rgb(219, 207, 207);
-    border: 2px solid transparent;
-    border-radius: 5px;
+   width:20vw;
+   height:5vh;
+   font-size:1.5vw;
+   background-color:rgb(219, 207, 207);
+   border: 2px solid transparent;
+   border-radius: 5px;
+
+
 
 
 }
 .logPassword{
-    position:absolute;
-    font-size:5vw; 
-    left:30vw;
-    top:50vh;
-    font-family: Mulish;
-    color:whitesmoke;
-    animation: logUser ease .9s ;
+   position:absolute;
+   font-size:5vw;
+   left:30vw;
+   top:50vh;
+   font-family: Mulish;
+   color:whitesmoke;
+   animation: logUser ease .9s ;
 }
+
 
 .logPassword input{
-    width:20vw; 
-    height:5vh;
-    font-size:1.5vw;
-    background-color:rgb(219, 207, 207);
-    border: 2px solid transparent;
-    border-radius: 5px;
+   width:20vw;
+   height:5vh;
+   font-size:1.5vw;
+   background-color:rgb(219, 207, 207);
+   border: 2px solid transparent;
+   border-radius: 5px;
 
-    
+
+  
 }
+
+
 
 
 .logOutline {
-    position:absolute;
-    left:22vw;
-    top:10vw;
-    width:60vw;
-    height:64vh;
-    border-radius: 25px;
-    box-shadow: 0 0 2px 2px rgb(192, 192, 192);
-    background: linear-gradient(90deg, rgb(55, 75, 97), rgb(65, 83, 100)) ;
-    animation: logOutline ease .5s;
-    animation: logUser ease 1.1s ;
-}
-
-.logOutlineTop {
-    transform: rotate(90deg);
-    position:absolute;
-    left:14vw;
-    top:19vw;
-    width:30vw;
-    height:30vh;
-    border-radius: 15px;
-    background: linear-gradient(90deg, rgb(56, 78, 100), rgb(65, 83, 100)) ;
-    animation: logOutlineTop ease 0.7s ;
-    box-shadow: 0 0 1px 1px rgb(158, 158, 158);
-}
-.logOutlineBottom {
-    transform: rotate(90deg);
-    position:absolute;
-    left:60vw;
-    bottom:18vw;
-    width:30vw;
-    height:30vh;
-    border-radius: 15px;
-    background: linear-gradient(90deg, rgb(55, 75, 97), rgb(65, 83, 100)) ;
-    animation: logOutlineBottom ease 0.7s ;
-    box-shadow: 0 0 1px 1px rgb(158, 158, 158);
+   position:absolute;
+   left:22vw;
+   top:10vw;
+   width:60vw;
+   height:64vh;
+   border-radius: 25px;
+   box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.6);
+   background: linear-gradient(90deg, rgb(55, 75, 97), rgb(65, 83, 100)) ;
+   animation: logOutline ease .6s;
+   animation:
+       typing2 .7s steps(58, end) forwards;
 }
 @keyframes logOutline {
-    from {transform: translateY(-2vh)}
-    to {transform: translateY(0vh)}
+   from {transform: translateY(-2vh)}
+   to {transform: translateY(0vh)}
 }
-@keyframes logOutlineTop {
-    from {transform: rotate(90deg) translateX(-4vh)}
-    to {transform: rotate(90deg) translateX(0vh)}
-}
-@keyframes logOutlineBottom {
-    from {transform: rotate(90deg) translateX(1vh)}
-    to {transform: rotate(90deg) translateX(0vh)}
-}
+
 
 #background {
-    position:absolute;
-    left:35vw;
-    top:15.3vh;
-    width:54.5vw;
+   position:absolute;
+   left:35vw;
+   top:15.3vh;
+   width:54.5vw;
 }
 
+
 .logDone {
-    position:absolute;
-    width:10vw;
-    height:5vw;
-    font-size:1.5vw;
-    top:65vh;
-    left:47vw;
-    border-radius: 15px;
-    font-family: Mulish;
-    background-color:rgb(218, 226, 236);
-    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
-    animation: logUser ease 1.1s ;
+   position:absolute;
+   width:10vw;
+   height:5vw;
+   font-size:1.5vw;
+   top:65vh;
+   left:47vw;
+   border-radius: 15px;
+   font-family: Mulish;
+   background-color:rgb(218, 226, 236);
+   box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.3);
+   animation: logUser ease 1.1s ;
 }
+
+
 
 
 .cgDiv input {
-    margin-bottom: 1vh;
-    display: flex;
-    flex-direction: column;
-    width:15vw;
+   margin-bottom: 1vh;
+   display: flex;
+   flex-direction: column;
+   width:15vw;
+   padding: 5px;
+   box-shadow: 2px 2px 2px rgba(2, 0, 0, 0.6);
+   font-size: 15px;
+
+
+
+
 }
+
 
 .gradeDiv input{
 
-    width:15vw;
-    background-color: blanchedalmond;
-    border: 2px solid transparent;
+
+   width:15vw;
+   background-color: blanchedalmond;
+   border: 2px solid transparent;
+   padding: 5px;
+   box-shadow: 2px 2px 2px rgba(2, 0, 0, 0.6);
+   font-size: 15px;
+
+
+
+
+
+
+
+
 
 
 }
 #plus{
-    width: 3vw;
-    animation: plus .8s ease 1; 
-    left:0vw;
-    margin-right: 1vw; 
+   width: 3vw;
+   animation: plus .8s ease 1;
+   left:0vw;
+   margin-right: 1vw;
+
 
 }
- 
+
 
 .cgDiv input {
-    background-color: blanchedalmond;
-    border: 2px solid transparent;
-    border-radius: 5px;
+   background-color: blanchedalmond;
+   border: 2px solid transparent;
+   border-radius: 5px;
+   padding: 5px;
+   box-shadow: 2px 2px 2px rgba(2, 0, 0, 0.6);
+   font-size: 15px;
+
+
+
+
+
+
+
+
 
 
 }
+
 
 #minus{
-    width: 3vw;
-    animation: minus .8s ease 1; 
-    left:0vw;
+   width: 3vw;
+   animation: minus .8s ease 1;
+   left:0vw;
+
 
 }
 
+
 #schoolTB{
-    background-color: blanchedalmond;
-    width: 20vw;
-    border: 2px solid transparent;
+   background-color: blanchedalmond;
+   width: 20vw;
+   border: 2px solid transparent;
+   padding: 5px;
+   box-shadow: 2px 2px 2px rgba(2, 0, 0, 0.6);
+   font-size: 15px;
+
+
+
+
+
+
+
+
+
 
 
 
 }
 .addBtn, .minusBtn {
-    display: inline-block; 
+   display: inline-block;
 }
+
 
 #passionTB{
-    background-color: blanchedalmond;
-    width:10vw;
-    animation: passionTB .8s ease 1;
-    border: 2px solid transparent;
+   background-color: blanchedalmond;
+   width:10vw;
+   animation: passionTB .8s ease 1;
+   border: 2px solid transparent;
+   padding: 5px;
+   box-shadow: 2px 2px 2px rgba(2, 0, 0, 0.6);
+   font-size: 15px;
 
 
 
 
-    
+
+
+
+
+  
+
 
 }
+
+
+
 
 
 
 #enterBTN {
-    position:absolute;
-    width: 15vw;
-    height:5vw;
-    border-radius:25px;
-    top:85vh;
-    left:32vw;
-    font-size: 2.5vw;
-    font-family: Mulish;
-    background-color:rgb(218, 226, 236);
-    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
-    
+   position:absolute;
+   width: 15vw;
+   height:5vw;
+   border-radius:22px;
+   top:85vh;
+   left:32vw;
+   font-size: 2.5vw;
+   font-family: Mulish;
+   background-color:rgb(218, 226, 236);
+   box-shadow: 2px 2px 2px rgba(2, 0, 0, 0.6);
+
+
+  
 }
+
 
 .aiText {
-    position: absolute;
-    left:35vw;
-    bottom:30vh;
-    white-space: pre-wrap;
-    line-height: 1.45;
-    max-width: 70ch;
-    margin: 1rem 0;
-    height:50vh;
-    overflow:scroll;
-    padding: 10px;
-    background: linear-gradient(90deg, rgb(66, 90, 114), rgb(65, 83, 100)) ;
-    border-radius: 10px;
-    font-size:1.7vw;
-    font-family: Mulish;
-    color:whitesmoke;
-    opacity: 0;
-    width:50vw;
-    transition: opacity 0.00001s ease-in;
+   position: absolute;
+   left:35vw;
+   bottom:30vh;
+   white-space: pre-wrap;
+   line-height: 1.45;
+   max-width: 70ch;
+   margin: 1rem 0;
+   height:50vh;
+   overflow:scroll;
+   padding: 10px;
+   background: linear-gradient(90deg, rgb(66, 90, 114), rgb(65, 83, 100)) ;
+   border-radius: 10px;
+   font-size:1.7vw;
+   font-family: Mulish;
+   color:whitesmoke;
+   opacity: 0;
+   width:50vw;
+   transition: opacity 0.00001s ease-in;
 }
 .welcomeDiv{
-    position:absolute;
-    left:37vw;
-    font-family: Mulish;
-    color:whitesmoke;
-    font-size:55px;
-    display:inline-block;
-    overflow:hidden;
-    width:0;
-    white-space: nowrap;
-    padding: 5px;
-    animation:
-        typing .7s steps(11, end) forwards;
+   position:absolute;
+   left:40vw;
+   font-family: Mulish;
+   color:whitesmoke;
+   font-size:45px;
+   display:inline-block;
+   overflow:hidden;
+   width:0;
+   white-space: nowrap;
+   animation:
+       typing .7s steps(11, end) forwards;
+
+
+
 
 
 
 }
+
+
 
 
 .aiText.show {
-    opacity: 1;
+   opacity: 1;
+
 
 }
+
+
 
 
 #gradeText {
-    animation: gradeText .8s ease 1; 
-    left:0vw;
-    color:rgb(224, 224, 224);
+   animation: gradeText .8s ease 1;
+   left:0vw;
+   color:rgb(224, 224, 224);
+   font-size: 35px;   
+
+
+
+
 
 
 }
-  #anchorSignUp{
-    position:absolute;
-    left:0vw;
-    color: rgb(224, 224, 224);
-    left: 43.5vw;
-    bottom: 20vh;
-    font-family: Mulish;
-    animation: logUser ease 1.3s ;
+ #anchorSignUp{
+   position:absolute;
+   left:0vw;
+   color: rgb(224, 224, 224);
+   left: 43.5vw;
+   bottom: 20vh;
+   font-family: Mulish;
+   animation: logUser ease 1.3s ;
 
-  }
+
+ }
+
+
 
 
 #dot {
-    position:absolute;
+   position:absolute;
 }
+
+
 
 
 #CGtext {
-    animation: CGtext .8s ease 1; 
-    left:0vw;
-    color: rgb(224, 224, 224);
-    
+   animation: CGtext .8s ease 1;
+   left:0vw;
+   color: rgb(224, 224, 224);
+   font-size: 35px;   
 }
+
 
 #gradeTB {
-    animation: gradeTB .8s ease 1; 
-    left:0vw;
-    border-radius: 5px;
+   animation: gradeTB .8s ease 1;
+   left:0vw;
+   border-radius: 5px;
+
 
 }
 
+
 #cgTB1 {
-    animation: cgTB1 .8s ease 1; 
-    left:0vw;
-    border-radius: 5px;
+   animation: cgTB1 .8s ease 1;
+   left:0vw;
+   border-radius: 5px;
+
 
 }
 #cgTB2 {
-    animation: cgTB2 .8s ease 1; 
-    left:0vw;
-    border-radius: 5px;
+   animation: cgTB2 .8s ease 1;
+   left:0vw;
+   border-radius: 5px;
+
 
 }
 #cgTB3 {
-    animation: cgTB3 .8s ease 1; 
-    left:0vw;
-    border-radius: 5px;
+   animation: cgTB3 .8s ease 1;
+   left:0vw;
+   border-radius: 5px;
+
 
 }
 #cgTB4 {
-    animation: cgTB3 .8s ease 1; 
-    left:0vw;
-    border-radius: 5px;
+   animation: cgTB3 .8s ease 1;
+   left:0vw;
+   border-radius: 5px;
+
 
 }
 #schoolText {
-    animation: schoolText .8s ease 1; 
-    left:0vw;
-    color:rgb(224, 224, 224);
+   animation: schoolText .8s ease 1;
+   left:0vw;
+   color:rgb(224, 224, 224);
+   font-size: 35px;   
+
+
+
+
 
 
 }
 #schoolTB{
-    animation: schoolTB .8s ease 1; 
-    left:0vw;
-    border-radius: 5px;
+   animation: schoolTB .8s ease 1;
+   left:0vw;
+   border-radius: 5px;
 }
 #PassionText{
-    animation: PassionText .8s ease 1; 
-    left:0vw;
-    color:rgb(224, 224, 224);
+   animation: PassionText .8s ease 1;
+   left:0vw;
+   color:rgb(224, 224, 224);
+   font-size: 35px;   
+
+
+
+
 
 
 }
 #passionTB{
-    animation: passionTB .8s ease 1; 
-    left:0vw;
-    border-radius: 5px;
+   animation: passionTB .8s ease 1;
+   left:0vw;
+   border-radius: 5px;
+
 
 }
 .contdiv{
-    position:absolute;
-    background-color: rgb(50, 84, 121);
-    width:28vw;
-    height:45vw;
-    padding:15px;
-    border-radius:20px;
-    font-family: Mulish;
-    font-size:15px;
-    background: linear-gradient(90deg, rgb(66, 90, 114), rgb(65, 83, 100)) ;
-    animation: contdiv .8s ease 1;
-   overflow-y:auto;
-   max-height:45vw;
+   position:absolute;
+   background-color: rgb(50, 84, 121);
+   width:28vw;
+   height:45vw;
+   padding:15px;
+   border-radius:20px;
+   font-family: Mulish;
+   font-size:15px;
+   background: linear-gradient(90deg, rgb(66, 90, 114), rgb(65, 83, 100)) ;
+   animation: contdiv .8s ease 1;
+  overflow-y:auto;
+  max-height:45vw;
+  box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.4);
+
+
+
 
 }
 #aiMan{
-    position:absolute;
-    bottom: 45vh;
-    width:60vw;
-    left:60vw;
-    transform:scaleX(-1);
+   position:absolute;
+   bottom: 45vh;
+   width:50vw;
+   left:65vw;
+   transform:scaleX(-1);
+
+
 
 
 }
 #welcomeText{
-    position:absolute;
-    left:35vw;
-    font-family: Mulish;
-    color:whitesmoke;
-    font-size:45px;
+   position:absolute;
+   left:35vw;
+   font-family: Mulish;
+   color:whitesmoke;
+   font-size:45px;
+   border-radius: 10px;
+   box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.4);
+   background: linear-gradient(90deg, rgb(66, 90, 114), rgb(65, 83, 100)) ;
 }
+
 
 #target {
-    position:absolute;
-    width:200px;
-    top:76vh;
-    display: none;
+   position:absolute;
+   width:200px;
+   top:76vh;
+   display: none;
 }
+
 
 #timer {
-    position:absolute;
-    top:70vh;
-    font-family: Mulish;
-    color:rgb(212, 212, 212);
-    left:80vw;
-    outline: rgb(255, 255, 255) 4px solid;
-    padding: .3vw;
-    border-radius: 5px;
+   position:absolute;
+   top:70vh;
+   font-family: Mulish;
+   color:rgb(212, 212, 212);
+   left:80vw;
+   outline: rgb(255, 255, 255) 4px solid;
+   padding: .3vw;
+   border-radius: 5px;
 }
+
 
 #scoreText {
-    position:absolute;
-    top:80vh;
-    font-family: Mulish;
-    color:rgb(212, 212, 212);
-    left:82vw;
-    outline: rgb(255, 255, 255) 4px solid;
-    padding: .3vw;
-    border-radius: 5px;
+   position:absolute;
+   top:80vh;
+   font-family: Mulish;
+   color:rgb(212, 212, 212);
+   left:82vw;
+   outline: rgb(255, 255, 255) 4px solid;
+   padding: .3vw;
+   border-radius: 5px;
 }
 
+
 #testButton {
-    position:absolute;
-    width: 15vw;
-    height:5vw;
-    border-radius:15px;
-    top:75vh;
-    left:82vw;
-    font-size: 2.5vw;
-    font-family: Mulish;
-    background-color:rgb(199, 196, 181);
-    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
+   position:absolute;
+   width: 15vw;
+   height:5vw;
+   border-radius:15px;
+   top:75vh;
+   left:82vw;
+   font-size: 2.5vw;
+   font-family: Mulish;
+   background-color:rgb(199, 196, 181);
+   box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.6);
 }
+
+
+
 
 
 
 @keyframes gradeText {
-    from { transform: translateX(-20vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-20vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes contdiv {
-    from { transform: translateX(-20vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-20vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes gradeTB {
-    from { transform: translateX(-40vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-40vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes CGtext {
-    from { transform: translateX(-60vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-60vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes cgTB1 {
-    from { transform: translateX(-80vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-80vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes cgTB2 {
-    from { transform: translateX(-100vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-100vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes cgTB3 {
-    from { transform: translateX(-120vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-120vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes cgTB4 {
-    from { transform: translateX(-140vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-140vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes plus {
-    from { transform: translateX(-160vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-160vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes minus {
-    from { transform: translateX(-180vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-180vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes schoolText {
-    from { transform: translateX(-200vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-200vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes schoolTB {
-    from { transform: translateX(-220vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-220vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes PassionText {
-    from { transform: translateX(-240vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-240vw); }
+   to { transform: translateX(0vw); }
 }
+
 
 @keyframes passionTB {
-    from { transform: translateX(-260vw); } 
-    to { transform: translateX(0vw); }
+   from { transform: translateX(-260vw); }
+   to { transform: translateX(0vw); }
 }
 
+
 #canvas {
-    position: absolute;
-    left:35vw;
-    top:15vh;
-    outline: auto;
-    
+   position: absolute;
+   left:35vw;
+   top:15vh;
+  
 }
